netflix analysis updated

--- a/development/02_netflix_data_analysis.ipynb
+++ b/development/02_netflix_data_analysis.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "[8807 rows x 12 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -392,13 +392,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'South Africa', '', 'Slovenia', 'South Korea', 'Iceland', 'Austria', 'Iraq', 'Kuwait', 'East Germany', 'Cameroon', 'Netherlands', 'Dominican Republic', 'Finland', 'Ireland', 'Unknown', 'Somalia', 'Nigeria', 'Panama', 'Hungary', 'Portugal', 'Denmark', 'Iran', 'Malawi', 'Turkey', 'Burkina Faso', 'Germany', 'Malta', 'Puerto Rico', 'Argentina', 'Senegal', 'Hong Kong', 'Vietnam', 'Samoa', 'Russia', 'Colombia', 'Norway', 'Taiwan', 'Syria', 'United States,', 'Montenegro', 'Belgium', 'Morocco', 'Albania', 'Jordan', 'Sweden', 'Cuba', 'Australia', 'Angola', 'Singapore', 'Namibia', 'Ukraine', 'Philippines', 'Malaysia', 'Sudan', 'Peru', 'Ghana', 'Lebanon', 'Cambodia', 'Sri Lanka', 'Kazakhstan', 'Venezuela', 'Vatican City', 'Thailand', 'Armenia', 'Indonesia', 'Slovakia', 'Bulgaria', 'Uruguay', 'Chile', 'France', 'Greece', 'Ethiopia', 'Poland,', 'Spain', 'New Zealand', 'Belarus', 'Egypt', 'Serbia', 'Brazil', 'United States', 'Lithuania', 'Canada', 'Romania', 'Mozambique', 'Paraguay', 'Bermuda', 'Nepal', 'Japan', 'Nicaragua', 'Cambodia,', 'Bahamas', 'Ecuador', 'Italy', 'Kenya', 'United Arab Emirates', 'United Kingdom', 'Afghanistan', 'Bangladesh', 'West Germany', 'Liechtenstein', 'Qatar', 'Mexico', 'Botswana', 'Palestine', 'Zimbabwe', 'Israel', 'Mauritius', 'Latvia', 'Croatia', 'Guatemala', 'Switzerland', 'Mongolia', 'China', 'Pakistan', 'Jamaica', 'Azerbaijan', 'Algeria', 'Soviet Union', 'Czech Republic', 'India', 'Cayman Islands', 'Cyprus', 'Poland', 'United Kingdom,', 'Uganda', 'Georgia', 'Luxembourg', 'Saudi Arabia'}\n",
       "There are 128 different countries in the data\n"
      ]
     }
@@ -418,6 +419,7 @@
     "unique_countries = set(all_countries)\n",
     "n_countries = len(unique_countries) # TODO n_countries has to be a single integer number with the unique number of different countries (you can build this in multiple lines and steps)\n",
     "\n",
+    "print(unique_countries)\n",
     "print(f\"There are {n_countries} different countries in the data\")"
    ]
   },
