--- a/development/02_netflix_data_analysis.ipynb
+++ b/development/02_netflix_data_analysis.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "[8807 rows x 12 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -392,14 +392,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Ethiopia', 'Egypt', 'Samoa', 'Kenya', 'Puerto Rico', 'Slovakia', 'West Germany', 'Nicaragua', 'Armenia', 'Australia', 'Croatia', 'Paraguay', 'Bulgaria', 'Hungary', 'New Zealand', 'Saudi Arabia', 'Lithuania', 'Cyprus', 'Philippines', 'Brazil', 'Malawi', 'Cayman Islands', 'Portugal', 'United Kingdom', 'United States', 'United Arab Emirates', 'Vietnam', 'Bermuda', 'Canada', 'Jamaica', 'Romania', 'China', 'Soviet Union', 'Montenegro', 'Norway', 'Belgium', 'Ghana', 'Ireland', 'Mongolia', 'Nigeria', 'Peru', 'Malaysia', 'Mozambique', 'Thailand', 'Argentina', 'Sri Lanka', 'Syria', 'Guatemala', 'Liechtenstein', 'Serbia', 'Japan', 'Austria', 'Cuba', 'Georgia', 'India', 'Iceland', 'Botswana', 'South Korea', 'Uruguay', 'France', 'Colombia', 'Algeria', 'Italy', 'Bangladesh', 'Slovenia', 'Somalia', 'Cameroon', 'Palestine', 'Ecuador', 'Luxembourg', 'Finland', 'Pakistan', 'Iraq', 'Namibia', 'Turkey', 'Vatican City', 'Senegal', 'Netherlands', 'Albania', 'Poland', 'Bahamas', 'Azerbaijan', 'Russia', 'Spain', 'Afghanistan', 'Denmark', 'Belarus', 'Sudan', 'Venezuela', 'Cambodia', 'Jordan', 'Iran', 'Singapore', 'Hong Kong', 'Malta', 'Mauritius', 'Latvia', 'Mexico', 'Israel', 'Zimbabwe', 'South Africa', 'Switzerland', 'Uganda', 'Panama', 'Taiwan', 'Angola', 'Lebanon', 'Chile', 'Burkina Faso', 'Kuwait', 'Dominican Republic', 'Nepal', 'Qatar', 'Germany', 'Morocco', 'East Germany', 'Indonesia', 'Kazakhstan', 'Czech Republic', 'Greece', 'Sweden', 'Ukraine'}\n",
+      "{'Norway', 'Turkey', 'Namibia', 'Canada', 'Philippines', 'Greece', 'Nicaragua', 'Italy', 'Paraguay', 'Sri Lanka', 'India', 'Peru', 'Armenia', 'Algeria', 'Iran', 'Saudi Arabia', 'Senegal', 'Jamaica', 'Zimbabwe', 'Pakistan', 'South Korea', 'Netherlands', 'Belgium', 'Kuwait', 'Albania', 'Angola', 'Burkina Faso', 'Puerto Rico', 'Austria', 'Somalia', 'Egypt', 'Belarus', 'Colombia', 'Mauritius', 'Palestine', 'Hungary', 'Australia', 'Iraq', 'Spain', 'Liechtenstein', 'Hong Kong', 'Azerbaijan', 'Mozambique', 'Serbia', 'Vatican City', 'Mexico', 'France', 'Cameroon', 'Slovakia', 'Bangladesh', 'Argentina', 'Czech Republic', 'United Kingdom', 'Nigeria', 'Ecuador', 'Ireland', 'Israel', 'Switzerland', 'Syria', 'Dominican Republic', 'Kazakhstan', 'Brazil', 'Malawi', 'United States', 'Vietnam', 'Indonesia', 'Bermuda', 'Slovenia', 'Venezuela', 'Malta', 'Sweden', 'Qatar', 'Portugal', 'Cambodia', 'Georgia', 'Ethiopia', 'Taiwan', 'Uruguay', 'Ghana', 'Guatemala', 'Ukraine', 'Samoa', 'Lebanon', 'Nepal', 'New Zealand', 'Botswana', 'Iceland', 'Bahamas', 'Soviet Union', 'Poland', 'Thailand', 'Kenya', 'United Arab Emirates', 'Denmark', 'Singapore', 'China', 'Croatia', 'Sudan', 'South Africa', 'Luxembourg', 'Russia', 'Cayman Islands', 'Lithuania', 'Germany', 'Latvia', 'Uganda', 'Cyprus', 'Cuba', 'Finland', 'Malaysia', 'Afghanistan', 'Chile', 'Panama', 'West Germany', 'Morocco', 'East Germany', 'Bulgaria', 'Mongolia', 'Japan', 'Montenegro', 'Romania', 'Jordan'}\n",
       "There are 122 different countries in the data\n"
      ]
     }
@@ -426,7 +426,6 @@
     "# Filter out empty strings from the cleaned list\n",
     "cleaned_countries = cleaned_countries[(cleaned_countries != '' )& (cleaned_countries != 'Unknown')]\n",
     "\n",
-    "# Get unique countries by converting to a set or using .unique() with pandas\n",
     "unique_countries = set(cleaned_countries)\n",
     "\n",
     "print(unique_countries)\n",
@@ -445,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -538,20 +537,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_26384\\1376559230.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_5340\\1376559230.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  movies_df['duration'] = movies_df['duration'].astype(str)\n",
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_26384\\1376559230.py:11: SettingWithCopyWarning: \n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_5340\\1376559230.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
